[MM-38537] Fixing spacing

--- a/sass/components/_files.scss
+++ b/sass/components/_files.scss
@@ -483,7 +483,7 @@
             .post-image__name {
                 display: block;
                 overflow: hidden;
-                max-width: 167px;
+                max-width: 151px;
                 margin-bottom: 3px;
                 font-weight: 600;
                 outline: none;
